<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.rcauth.masterportal</groupId>
    <artifactId>master-portal</artifactId>
    <version>${revision}</version>
    <name>RCauth Master Portal</name>
    <packaging>pom</packaging>
    <description>Parent for the different MasterPortal components</description>
    <url>https://github.com/rcauth-eu/aarc-master-portal</url>

    <licenses>
        <license>
            <name>Apache license</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Tamas Balogh</name>
            <email>tamasb@nikhef.nl</email>
        </developer>
        <developer>
            <name>Mischa Sallé</name>
            <email>msalle@nikhef.nl</email>
        </developer>
    </developers>

    <properties>
        <revision>0.2.0-SNAPSHOT</revision>
        <oa4mpVersion>4.1.2-RCauth</oa4mpVersion>
        <seclibVersion>4.1.2-RCauth</seclibVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>master-portal-common</module>
        <module>master-portal-client</module>
        <module>master-portal-server</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>3.1.0</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <plugins>
            <!-- make sure jar file's MANIFEST.MF will contain the version -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <!--compilerArgument>-Xlint:unchecked</compilerArgument-->
                    <compilerArgument>-Xlint:all</compilerArgument>
                </configuration>
                <version>3.5.1</version>
            </plugin>

            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.26</version>
            </plugin>

            <!-- update revision properties -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <!-- also keep name -->
                    <pomElements><name/></pomElements>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <use>false</use>
                    <!-- Note: javax.servlet does not provide proper link for
                         detectLinks, hence specify manually -->
                    <links>
                        <link>https://javaee.github.io/javaee-spec/javadocs/</link>
                        <!-- Note: next would be upstream, we need our own -->
                        <!--link>http://grid.ncsa.illinois.edu/myproxy/oauth/apidocs/</link-->
                    </links>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <!-- Note: for Java <10 comment out next one -->
                            <additionalOptions>-html5</additionalOptions>
                            <!-- next flag is useful if there are issues with the
                                 javadoc such as empty javadoc tags -->
                            <!--doclint>none</doclint-->
                            <!-- enable links to Java's own javadoc -->
                            <detectJavaApiLink>true</detectJavaApiLink>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

</project>
